<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>CreateHotelRoom</class>
 <widget class="QDialog" name="CreateHotelRoom">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>310</width>
    <height>283</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <layout class="QFormLayout" name="formLayout">
   <item row="0" column="0">
    <layout class="QFormLayout" name="formLayout_2">
     <item row="0" column="0">
      <widget class="QLabel" name="IdL">
       <property name="font">
        <font>
         <family>Goudy Old Style</family>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string>Enter id</string>
       </property>
      </widget>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="NumberL">
       <property name="font">
        <font>
         <family>Goudy Old Style</family>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string>Enter number</string>
       </property>
      </widget>
     </item>
     <item row="2" column="0">
      <widget class="QLabel" name="NumOofRoomL">
       <property name="font">
        <font>
         <family>Goudy Old Style</family>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string>Enter number of rooms</string>
       </property>
      </widget>
     </item>
     <item row="3" column="0">
      <widget class="QLabel" name="StreetL">
       <property name="font">
        <font>
         <family>Goudy Old Style</family>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string>Enter street</string>
       </property>
      </widget>
     </item>
     <item row="4" column="0">
      <widget class="QLabel" name="FloorL">
       <property name="font">
        <font>
         <family>Goudy Old Style</family>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string>Enter floor</string>
       </property>
      </widget>
     </item>
     <item row="6" column="0">
      <widget class="QLabel" name="AddL">
       <property name="font">
        <font>
         <family>Goudy Old Style</family>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string>Enter additional service</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
      <widget class="QLineEdit" name="IdLE"/>
     </item>
     <item row="1" column="1">
      <widget class="QLineEdit" name="NumberLE"/>
     </item>
     <item row="2" column="1">
      <widget class="QLineEdit" name="NumOfRoomLE"/>
     </item>
     <item row="3" column="1">
      <widget class="QLineEdit" name="StreetLE"/>
     </item>
     <item row="4" column="1">
      <widget class="QLineEdit" name="FloorLE"/>
     </item>
     <item row="6" column="1">
      <widget class="QLineEdit" name="AddLE"/>
     </item>
     <item row="5" column="0">
      <widget class="QLabel" name="PriceL">
       <property name="font">
        <font>
         <family>Goudy Old Style</family>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string>Enter Price</string>
       </property>
      </widget>
     </item>
     <item row="5" column="1">
      <widget class="QLineEdit" name="PriceLE"/>
     </item>
    </layout>
   </item>
   <item row="1" column="0">
    <widget class="QPushButton" name="CreateHotelRoomPB">
     <property name="font">
      <font>
       <family>High Tower Text</family>
       <pointsize>14</pointsize>
      </font>
     </property>
     <property name="text">
      <string>Create</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
